<resources>
    <string name="app_name">MoviePosterApp</string>
    <string name="movie_summary" translatable="false">Through The Never</string>
    <string name="confirm">Confirm</string>
    <string name="select_adult">adult Tickets:</string>
    <string name="adult">Adult</string>
    <string name="number_of_adult">Adult Tickets: %1$d (*10₪)</string>

    <string name="child">Child</string>
    <string name="cost">Total Cost: </string>
    <string name="select_child">child Tickets:</string>
    <string name="number_of_child">Child Tickets: %1$d (*5₪)</string>
    <string name="event_date">Event Date:</string>
    <string name="num_adult">Number of Adult Tickets:</string>
    <string name="num_child">Number of Child Tickets:</string>
    <string name="get_tickets">Get Tickets</string>
    <string name="select_date">Select Dates</string>
    <string name="total_cost">Total Cost: %1$d₪</string>
    <string name="select">-Select-</string>
    <string name="branch_name">Branch Name: %1$s</string>
    <string name="select_branch">Select Branch:</string>
    <string name="selected_branch">Branch:</string>
    <string name="date">Date: %1$s</string>
    <string name="movie_details">A young Metallica roadie named Trip (Dane DeHaan) embarks on an apocalyptic journey through a decimated urban landscape as the band plays to a sold-out arena crowd in this high-concept concert film from director Nimrod Antal (Predators).</string>
    <string name="description">movie info</string>
    <string name="ok">OK</string>
    <string name="purchase_details">Purchase Details</string>
    <string name="order_summary">Order Summary</string>
    <string name="no_purchase_info_available">There are no recorded purchases. Please place an order.</string>
    <string name="movie_image">Movie Image</string>
    <string name="order_history">History</string>
    <string name="please_select_a_valid_branch">Please select a valid branch</string>
    <string name="adults_selected">Adults Selected: %1$d</string>
    <string name="child_selected">Child Selected: %1$d</string>
    <string name="purchase_confirmed">Purchase Confirmed</string>
    <string name="glilot">Glilot</string>
    <string name="rishon">Rishon Lezion</string>
    <string name="jerusalem">Jerusalem</string>
</resources>