<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/tvOrderSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white_smoke"
        android:layout_margin="16dp"
        android:text="@string/order_summary" />


    <TextView
        android:id="@+id/tvBranchName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white_smoke"
        android:text="@string/branch_name" />
    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white_smoke"
        android:text="@string/event_date" />

    <TextView
        android:id="@+id/tvNumberOfAdult"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white_smoke"
        android:text="@string/adult_tickets" />
    <TextView
        android:id="@+id/tvNumberOfChild"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white_smoke"
        android:text="@string/child_tickets" />


    <TextView
        android:id="@+id/tvTotalCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white_smoke"
        android:text="@string/total_cost" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />
</LinearLayout>