<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pxfuel"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/history"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/baseline_history_24"
        app:iconTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="@+id/tvMovieTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMovieTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_summary"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textColor="@color/yellow"
        android:textSize="26sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/history"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerImages"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:clipToPadding="false"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMovieTitle" />

    <me.relex.circleindicator.CircleIndicator3
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/viewPagerImages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAdultLabel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/select_adult"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/spinnerAdultAmount"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/indicator" />

    <Spinner
        android:id="@+id/spinnerAdultAmount"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:dropDownHeight="100dp"
        android:entries="@array/ticket_numbers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tvAdultLabel"
        app:layout_constraintTop_toBottomOf="@id/indicator" />

    <TextView
        android:id="@+id/tvChildLabel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/select_child"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/spinnerChildAmount"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAdultLabel" />

    <Spinner
        android:id="@+id/spinnerChildAmount"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:dropDownHeight="100dp"
        android:entries="@array/ticket_numbers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tvChildLabel"
        app:layout_constraintTop_toBottomOf="@id/spinnerAdultAmount" />

    <TextView
        android:id="@+id/tvBranchLabel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/select_branch"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/spinnerBranchLocation"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChildLabel" />

    <Spinner
        android:id="@+id/spinnerBranchLocation"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:dropDownHeight="100dp"
        android:entries="@array/branches_names"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tvBranchLabel"
        app:layout_constraintTop_toBottomOf="@id/spinnerChildAmount" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/date_dialog_btn"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:padding="0dp"
        android:text="@string/select_date"
        android:textSize="16sp"
        app:cornerRadius="13dp"
        app:icon="@drawable/baseline_date_range_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBranchLabel"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/show_description"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:padding="0dp"
        android:text="@string/description"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/baseline_info_outline_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBranchLocation"
        app:layout_constraintVertical_bias="0.0"
        app:layout_goneMarginStart="30dp" />

    <Button
        android:id="@+id/btnGetTickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@drawable/button_background_selector"
        android:text="@string/get_tickets"
        android:textColor="@drawable/button_text_color_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBranchLabel" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="spinnerBranchLocation,tvAdultLabel,spinnerAdultAmount,tvBranchLabel,spinnerChildAmount,tvChildLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>